Blue gradient background

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -32,6 +32,9 @@ $app-direction: ltr;
 // to match your app's branding. Ionic uses a Sass map of
 // colors so you can add, rename and remove colors as needed.
 // The "primary" color is the only required color in the map.
+$background: linear-gradient(right, #4B96EC, #0E4585);
+$background-color: transparent;
+$toolbar-background: transparent;
 
 $colors: (
   primary:    #488aff,
